--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -29,3 +29,8 @@
   -webkit-text-stroke-width: thin;
   color: #5D4B9D;
 }
+
+.btn-home {
+  --border-radius: 2rem;
+  font-family: 'Open Sans', sans-serif;
+}
