--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-menu-button style="color: #00AAE2; --background-activated: #028DBB;"></ion-menu-button>
     </ion-buttons>
     <ion-row class="row-logo">
       <ion-col class="col-logo">
@@ -21,36 +21,27 @@
     </div>
     <ion-list lines="none">
       <ion-list-header style="justify-content: center; padding: 0px 0px;">
-        <ion-label class="text" style="font-size: 1rem;">Oi, Cidinei ;)</ion-label>
+        <ion-label class="text" style="font-size: 1rem;">Olá, {{ usuario }} ;)</ion-label>
       </ion-list-header>
-      <p class="text" style="font-size: 0.8rem; text-align: center; margin: 0px 0px 20px 0px;">Que tal descobrir um pouco mais sua cidade?</p>
+      <p class="text" style="font-size: 0.8rem; text-align: center; color: black; margin: 0px 0px 20px 0px;">Que tal descobrir um pouco mais sua cidade?</p>
       <hr style="height: 1px;border-width: 1px;margin: 10px;">
       <ion-row>
-        <ion-col>
-          <ion-button class="btn-home" size="small">Todas</ion-button>
+        <ion-col class="col-home">
+          <ion-button class="btn-default">Todas</ion-button>
         </ion-col>
-        <ion-col>
-          <ion-button class="btn-home" size="small">Próximos</ion-button>
+        <ion-col class="col-home">
+          <ion-button class="btn-default">Próximos</ion-button>
         </ion-col>
-        <ion-col>
-          <ion-button class="btn-home" size="small">Mais visitados</ion-button>
+        <ion-col class="col-home">
+          <ion-button class="btn-default">Mais visitados</ion-button>
         </ion-col>
       </ion-row>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
+      <ion-item>
+        <ion-label class="text">Todos os locais</ion-label>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
+      <ion-item href="">
+        <img src="../../assets/local.png"/>
+        <ion-label>nome do ponto</ion-label>
       </ion-item>
     </ion-list>
 </ion-content>
