--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -30,7 +30,8 @@
   color: #5D4B9D;
 }
 
-.btn-home {
-  --border-radius: 2rem;
-  font-family: 'Open Sans', sans-serif;
+.col-home {
+  justify-content: center;
+  display: flex;
 }
+
