--- a/src/global.scss
+++ b/src/global.scss
@@ -28,3 +28,16 @@
 .searchbar-input.sc-ion-searchbar-md {
     border-radius: 2rem;
 }
+
+.btn-default {
+    --background: #00AAE2;
+    --border-radius: 2rem;
+    --color: white;
+    --ripple-color: rgb(2,80,120);
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.5rem;
+    width: 100px;
+    height: 30px;
+    font-weight: bolder;
+    --box-shadow: 0px;
+}
