page ponto turistico

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <ion-menu type="overlay">
       <ion-header>
         <ion-toolbar>
-          <ion-title>Menu</ion-title>
+          <ion-title class="hello">Olá, [usuario]</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
@@ -11,7 +11,7 @@
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
             <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
               <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label>
+              <ion-label class="menu-list">
                 {{p.title}}
               </ion-label>
             </ion-item>
