--- a/src/global.scss
+++ b/src/global.scss
@@ -33,11 +33,12 @@
     --background: #00AAE2;
     --border-radius: 2rem;
     --color: white;
-    --ripple-color: rgb(2,80,120);
+    --ripple-color: rgb(1,40,60);
     font-family: 'Open Sans', sans-serif;
     font-size: 0.5rem;
     width: 100px;
     height: 30px;
     font-weight: bolder;
     --box-shadow: 0px;
+    text-transform: none;
 }
