--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -22,16 +22,43 @@
 .busca {
   position: absolute;
   margin-top: 1rem;
+  --icon-color: #00AAE2;
 }
 
-.text {
+.hello-user {
   font-family: 'Open Sans', sans-serif;
   -webkit-text-stroke-width: thin;
   color: #5D4B9D;
 }
 
+.text-list {
+  font-size: 0.8rem; 
+  text-align: center; 
+  color: black; 
+  margin: 0px 0px 20px 0px;
+  font-family: 'Open Sans', sans-serif;
+  -webkit-text-stroke-width: thin;
+}
+
 .col-home {
   justify-content: center;
   display: flex;
+}
+
+.mapa-home {
+  width: 100%; 
+  height: 100%;
+}
+
+.label-ponto {
+  margin-left: 0.5rem;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  -webkit-text-stroke-width: thin;
+}
+
+.name-user {
+  justify-content: center; 
+  padding: 0px 0px;
 }
 
