--- a/src/app/ponto-turistico/ponto-turistico.page.html
+++ b/src/app/ponto-turistico/ponto-turistico.page.html
@@ -38,10 +38,21 @@
     <div class="header-rating">
       Avaliação dos Visitantes
     </div>
-    <hr style="height: 1px; border-width: 1px; margin: 10px;">
+    <hr style="height: 1px; margin: 0rem 2rem; background-color: white;">
     <div class="content-rating">
-      <img src="../../assets/limdo.jpg" style="width: 50px; height: 50px; border-radius: 2rem;"/>
-      <p style="color: white;">TIF</p>
+      <ion-row>
+        <ion-col class="user-img">
+          <img src="../../assets/limdo.jpg" style="max-width: 50px; max-height: 50px; border-radius: 2rem;"/>
+        </ion-col>
+        <div style="padding-left: 1rem;">
+          <div class="user-name">
+            <p>GuiLIMDO Silveira</p>
+          </div>
+          <div class="user-comment">
+            <p>TIF</p>
+          </div>
+        </div>
+      </ion-row>
     </div>
     <div class="footer-rating">
       <ion-button id="btn-rating">Avaliar</ion-button>
