--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -24,7 +24,7 @@
       <hr style="height: 1px; border-width: 1px; margin: 10px;">
       <ion-row>
         <ion-col class="col-home">
-          <ion-button class="btn-default normal">Todas</ion-button>
+          <ion-button class="btn-default">Todas</ion-button>
         </ion-col>
         <ion-col class="col-home">
           <ion-button class="btn-default">Próximos</ion-button>
