--- a/src/app/ponto-turistico/ponto-turistico.page.html
+++ b/src/app/ponto-turistico/ponto-turistico.page.html
@@ -18,7 +18,7 @@
   <div class="photo">
     <img id="photo" src="../../assets/shapes.svg"/>
   </div>
-  <ion-row style="padding-left: 25px; padding-right: 25px;">
+  <ion-row style="padding-left: 1rem; padding-right: 1rem;">
     <ion-col class="col-prov"><img id="img-prov" src="../../assets/shapes.svg"/></ion-col>
     <ion-col class="col-prov"><img id="img-prov" src="../../assets/shapes.svg"/></ion-col>
     <ion-col class="col-prov"><img id="img-prov" src="../../assets/shapes.svg"/></ion-col>
@@ -36,9 +36,22 @@
   </div>
   <div class="rating">
     <div class="header-rating">
-      Avaliação dos Visitantes
+      <ion-row>
+        <ion-col id="medal">
+          <img src="../../assets/medal.png" style="width: 50px;"/>
+        </ion-col>
+        <ion-col>
+          <ion-row>Avaliação dos Visitantes</ion-row>
+          <ion-row style="color: gold;">
+            e*s*t*r*e*l*a*s
+          </ion-row>
+        </ion-col>
+        <ion-col id="note">
+          Nº
+        </ion-col>
+      </ion-row>
     </div>
-    <hr style="height: 1px; margin: 0rem 2rem; background-color: white;">
+    <hr style="height: 1px; margin: 0rem 1rem; background-color: white;">
     <div class="content-rating">
       <ion-row>
         <ion-col class="user-img">
@@ -57,5 +70,8 @@
     <div class="footer-rating">
       <ion-button id="btn-rating">Avaliar</ion-button>
     </div>
+  </div>
+  <div class="btn-quiz">
+    <ion-button id="btn-quiz">Quiz</ion-button>
   </div>
 </ion-content>
