--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -36,9 +36,9 @@
       <ion-item>
         <ion-label class="hello-user">Todos os locais</ion-label>
       </ion-item>
-      <ion-item *ngFor="let ponto of pontos" href="">
+      <ion-item *ngFor="let ponto of pontos" routerDirection="root">
         <img src="../../assets/local.png"/>
-        <ion-label class="label-ponto">Visitar {{ponto.nome}}</ion-label>
+        <ion-label class="label-ponto" (click)="visualizarPonto(ponto.id_ponto)">Visitar {{ponto.nome}}</ion-label>
       </ion-item>
     </ion-list>
 </ion-content>
