--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -11,8 +11,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <ion-label padding class="font" style="font-size: 1rem; padding-top: 1rem;"><b>Cadastre-se</b></ion-label><br/>
+<ion-content class="ion-padding">
+  <ion-label class="ion-padding" class="font" style="font-size: 1rem; padding-top: 1rem;"><b>Cadastre-se</b></ion-label><br/>
   <ion-item style="--border-color: transparent;">
     <ion-label class="ion-text-wrap font" id="text-1" style="font-size: 12px;">
       Bem vindo ao PGTour, realize um rápido cadastro e desfrute de todas as maravilhas desta cidade.
