--- a/src/global.scss
+++ b/src/global.scss
@@ -35,7 +35,7 @@
     --color: white;
     --ripple-color: rgb(1,40,60);
     font-family: 'Open Sans', sans-serif;
-    font-size: 0.5rem;
+    font-size: 10px;
     width: 100px;
     height: 30px;
     font-weight: bolder;
