--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,8 +1,9 @@
 <ion-content>
   <div class="animatedFadeInUp fadeInUp animated">
     <ion-row class="row-login">
-        <img id="logo" src="../../assets/logo-purple.svg"/>
-      </ion-row>
+      <img id="logo" src="../../assets/logo-purple.svg"/>
+    </ion-row>
+    <form #flogin="ngForm">
       <ion-row class="row-login">
         <div class="div-form">
           <ion-label class="label-form" >Usuário</ion-label><br/>
@@ -17,10 +18,11 @@
       <ion-row class="row-login">
         <div class="label-form" style="width: 100%; text-align: right; padding: 1rem 2rem; font-size: 13px;">Esqueci a senha</div>
         <div class="div-form">
-          <ion-button class="btn-default" style="width: 100%; height: 2.5rem; font-size: 12px;" (click)="logar()">ENTRAR</ion-button>
+          <ion-button type="submit" class="btn-default" style="width: 100%; height: 2.5rem; font-size: 12px;" (click)="logar()">ENTRAR</ion-button>
         </div>
         <div class="label-form" style="width: 100%; font-size: 1rem; padding: 2rem; text-align: center;">Cadastre-se</div>
       </ion-row>
+    </form>
   </div>
 </ion-content>
   
