--- a/src/app/ponto-turistico/ponto-turistico.page.scss
+++ b/src/app/ponto-turistico/ponto-turistico.page.scss
@@ -4,35 +4,31 @@
     display: flex;
 }
 
-.col-logo {
+.logo {
+    width: 100%; 
     display: flex; 
-    justify-content: center;
-}
-
-.row-logo {
-    margin-right: 48px;
-    padding: 0px 8px;
+    -webkit-box-pack: center; 
+    justify-content: center; 
+    padding-right: 54px;
 }
 
 .place {
     font-family: 'Open Sans', sans-serif;
     -webkit-text-stroke-width: thin;
     color: #5D4B9D;
+    width: 100%;
+    margin: 1rem 0rem;
 }
 
-#photo {
+.first-photo {
     width: 100%;
-    height: 100%;
-    border: 1px solid black;
+    height: auto;
 }
 
 .photo {
-    padding: 0rem 1rem 1rem;
-    height: 260px;
-}
-
-.nome-ponto {
-    padding: 1rem;
+    margin: 0rem 1rem 1rem;
+    height: auto;
+    text-align: -webkit-center;
 }
 
 .col-prov {
@@ -44,7 +40,6 @@
 #img-prov {
     width: 100%;
     height: 100%;
-    border: 1px solid black;
 }
 
 .desc-ponto {
@@ -53,14 +48,14 @@
     color: #5D4B9D;
     font-size: 1rem;   
     text-align: center;
-    padding: 1rem 0rem;
+    margin: 1rem 0rem;
 }
 
 .text {
     font-family: 'Open Sans', sans-serif;
     -webkit-text-stroke-width: thin;
     font-size: 12px;
-    padding: 0rem 1rem;
+    margin: 0rem 1rem;
     text-align: justify;
 }
 
@@ -79,7 +74,7 @@
 }
 
 .content-rating {
-    padding: 1rem 2rem;
+    padding: 1rem 1rem;
 }
 
 .footer-rating {
@@ -94,30 +89,39 @@
     --color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 0.8rem;
-    width: 100%;
+    width: 300px;
     text-transform: none;
 }
 
 .user-img {
     max-width: 50px;
     max-height: 50px;
-    padding: 0rem;
+    padding: 0;
+}
+
+.user-rating {
+    margin-left: 8px; 
+    width: 50%; 
+    padding: 0%;
+}
+
+.user-rating p {
+    margin-bottom: 0;
 }
 
 .user-name {
     color: white;
     font-family: "Open Sans", sans-serif;
-    font-size: 0.8rem;
+    font-size: 13.5px;
     font-weight: bolder;
     text-transform: none;
     width: 100%;
-    height: 35%;
 }
 
 .user-comment {
     color: white;
     font-family: 'Open Sans', sans-serif;
-    font-size: 0.6rem;
+    font-size: 12px;
     text-transform: none;
 }
 
@@ -125,8 +129,7 @@
     justify-content: center;
     display: flex;
     max-width: 100%;
-    padding: 0rem 1rem;
-    margin: 1rem 0rem;
+    margin: 1rem 1rem;
 }
 
 #btn-quiz {
@@ -135,7 +138,7 @@
     --color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 0.9rem;
-    width: 100%;
+    width: 450px;
     text-transform: none;
 }
 
@@ -153,4 +156,5 @@
     font-size: 25px;
     text-transform: none;
     font-weight: bolder;
+    text-align: right;
 }
