--- a/src/app/ponto-turistico/ponto-turistico.page.html
+++ b/src/app/ponto-turistico/ponto-turistico.page.html
@@ -68,6 +68,6 @@
     </div>
   </div>
   <div class="btn-quiz">
-    <ion-button id="btn-quiz">Quiz</ion-button>
+    <ion-button id="btn-quiz" (click)="showQuiz()">Quiz</ion-button>
   </div>
 </ion-content>
