--- a/src/global.scss
+++ b/src/global.scss
@@ -42,3 +42,7 @@
     --box-shadow: 0px;
     text-transform: none;
 }
+
+.item-highlight .item-inner-highlight{
+    --highlight-background: transparent;
+}
