--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -1,3 +1,8 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-label (click)="close()">< Voltar</ion-label>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
   <div #map></div>
 </ion-content>
