--- a/src/app/ponto-turistico/ponto-turistico.page.html
+++ b/src/app/ponto-turistico/ponto-turistico.page.html
@@ -9,10 +9,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button size="small" (click)="maps()">
-      <ion-icon name="arrow-dropleft"></ion-icon>
+<ion-content scrollEvents="true" appAutoHide [fab]="fab">
+  <ion-fab #fab vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="maps()">
+      <ion-icon name="locate"></ion-icon>
     </ion-fab-button>
   </ion-fab>
   <ion-item style="--border-color: transparent" *ngFor="let ponto of ponto">
