--- a/src/app/ponto-turistico/ponto-turistico.page.scss
+++ b/src/app/ponto-turistico/ponto-turistico.page.scss
@@ -74,11 +74,11 @@
 }
 
 .content-rating {
-    padding: 1rem 1rem;
+    padding: 1rem 1rem 0;
 }
 
 .footer-rating {
-    padding: 1rem 2rem 2rem;
+    padding: 0 2rem 2rem;
     justify-content: center;
     display: flex;
 } 
